# gnome-lirc-properties

./: .gitignore  ChangeLog  MAINTAINERS  Makefile.am  NEWS  autogen.sh  configure.ac  gnome-lirc-properties.doap  pylintrc
data/: .gitignore  20-x11-remotes.fdi  Makefile.am  gnome-lirc-properties-custom-config.ui  gnome-lirc-properties-mechanism.policy.in  gnome-lirc-properties.desktop.in.in  gnome-lirc-properties.glade  gnome-lirc-properties.ui  linux-input-layer-lircd.conf  org.gnome.LircProperties.Mechanism.conf  overrides.conf  receivers.conf
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
debian/: changelog  control  copyright  prerm  rules  watch
doc/: lirc.dia  lirc.txt
gnome_lirc_properties/: Makefile.am  __init__.py  backend.py  config.py.in  hardware.py  lirc.py  lsb.py  policykit.py
gnome_lirc_properties/net/: Makefile.am  MultipartPostHandler.py  __init__.py  services.py
gnome_lirc_properties/ui/: CustomConfiguration.py  Makefile.am  ProgressWindow.py  ReceiverChooserDialog.py  RemoteControlProperties.py  __init__.py
help/: Makefile.am
help/C/: gnome-lirc-properties.xml
help/cs/: cs.po
help/de/: de.po
help/es/: es.po
help/fr/: fr.po
help/sl/: sl.po
patches/: 0001-Use-new-instead-of-conf-as-filename-suffix.patch  0002-Add-resume-switch-to-irrecord.patch
po/: .gitignore  ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  ca.po  da.po  de.po  el.po  es.po  fr.po  gl.po  hu.po  it.po  pt.po  pt_BR.po  ro.po  sl.po  sr.po  sr@latin.po  sv.po  zh_CN.po
pylint/: custom-checker.py
test/: Makefile.am  example.lircrc  test-backend-service.py  test-lirc-client.c  test-lirc-key-listener.py  test-policykit-is-authorized.py  test-policykit-obtain-authorization.py  test-policykit.py  test-pylirc.py  test-run-backend-service.sh  test-udp-receiver.py  test-uploader.py
web/: README  service.wsgi
