EXTRA_DIST = \
	example.lircrc \
	test-backend-service.py \
	test-lirc-client.c \
	test-lirc-key-listener.py \
	test-policykit-is-authorized.py \
	test-policykit-obtain-authorization.py \
	test-policykit.py \
	test-pylirc.py \
	test-run-backend-service.sh \
	test-udp-receiver.py \
	test-uploader.py
